# discord-pretty-help

./: .gitignore  README.md  pyproject.toml
pretty_help/: menu.py  pretty_help.py
tests/: test_discord_pretty_help.py  test_nextcord_pretty_help.py
